--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.quantam.it.assignment">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,10 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuantamItAssignment">
         <activity
-            android:name=".ui.auth.AuthenticationActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.auth.SignInActivity"
+            android:name=".ui.auth.activity.AuthenticationActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
