google sign in button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-firestore'
 
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
     // Live data and ViewModel
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
