--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quantam.it.assignment" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.quantam.it.assignment">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:name=".Application"
@@ -20,6 +22,10 @@
         <activity
             android:name=".ui.auth.activity.AuthenticationActivity"
             android:exported="true" />
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
         <activity
             android:name=".MainActivity"
             android:exported="true" >
@@ -29,6 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            tools:replace="android:value"
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
     </application>
 
 </manifest>
